# Semestr5

./: .gitignore
AM/List1/tester/: Cargo.toml
AM/List1/tester/src/: lib.rs  main.rs  update.rs
AM/List2/exercise1/: Cargo.toml
AM/List2/exercise2/: Cargo.toml
AM/List2/exercise2/src/: main.rs
AM/List2/exercise3/: Cargo.toml
AM/List2/local_search/: Cargo.toml
AM/List2/local_search/src/: lib.rs
AM/List2/report/: report.tex
AM/List3/exercise1/: Cargo.toml
AM/List3/local_search/: Cargo.toml
AM/List3/report/: report.tex
AM/Lista1/report/: report.tex
AM/Lista1/tester/: Cargo.toml  README.md
JFTT/List1/FA/: Cargo.toml
JFTT/List1/KMP/: Cargo.toml
JFTT/List2/: exercise2.l  exercise4.l
JFTT/List3/calculator_c/: calc.l  calc.y  calc_result.c  calc_result.h  gf.c  gf.h
JFTT/List3/calculator_cpp/: Makefile  calc.lex  calc.y  gf.cpp  gf.hpp
JFTT/List3/calculator_rust/: Cargo.toml
JFTT/List4/: README.md  debugger
JFTT/List4/compiled/: output
JFTT/List4/compiler/: Cargo.toml  README.md  eq_in_while.txt_2  test1.txt
JFTT/List4/compiler/src/: ast.rs  ast_problem_checker.rs  ast_to_pre_assembler.rs  common.rs  main.rs  parser.lalrpop  pre_assembler.rs  pre_assembler_to_assembler.rs
JFTT/Lista1/FA/: Cargo.toml
JFTT/Lista2/: exercise1.l  exercise2.l  exercise3.l  exercise4.l
JFTT/Lista2/tests/: test.cpp  test2.cpp  xml.xml
JFTT/PDF1/: pdf1.tex
JFTT/PDF2/: pdf2.tex
KKD/List1/entropy/: Cargo.toml
KKD/List2/testy1/: my_test
KKD/List3/bit_queue/: Cargo.toml
KKD/List3/compressor/: Cargo.toml
KKD/List3/compressor/src/: main.rs
KKD/List3/elias_coding/: Cargo.toml
KKD/List3/elias_coding/fuzz/: Cargo.toml
KKD/List3/elias_coding/fuzz/fuzz_targets/: elias_delta.rs  elias_gamma.rs  elias_omega.rs
KKD/List3/fibonaci_coding/: Cargo.toml
KKD/List3/fibonaci_coding/fuzz/: Cargo.toml
KKD/List3/fibonaci_coding/fuzz/fuzz_targets/: coding.rs
KKD/List4/jpegls_tester/: Cargo.toml
KKD/List5/vector_quantisation/: Cargo.toml
KKD/List6/: README.md  test.tga
KKD/List6/compare_images/: Cargo.toml
KKD/List6/elias_coding/: Cargo.toml
KKD/List6/image_compression/: Cargo.toml
KKD/List6/image_decompression/: Cargo.toml
KKD/Lista1/entropy/: Cargo.toml  README.md  text_to_read_in_testing.txt
KKD/Lista2/decoder/: Cargo.toml
KKD/Lista2/encoder/: Cargo.toml  text_to_read_in_testing.txt
ON/: .gitignore
ON/List1/: exercise1.jl  exercise2.jl  exercise4.jl
ON/List1/report/: report.tex
ON/List2/: exercise1.jl  exercise6.jl  plotter.py  plotter2.py
ON/List2/report/: report.tex
ON/List3/: ZeroPointModule.jl  exercise1.jl  exercise2.jl  exercise3.jl  exercise4.jl  exercise5.jl  exercise6.jl  tester.jl
ON/List3/report/: report.tex
ON/List4/: PolynomialsModule.jl  exercise4.jl  exercise5.jl  exercise6.jl  tester.jl
ON/List4/report/: report.tex
ON/List5/: README.md  blocksys.jl  delete.me  main.jl  matrixes_representation.jl  matrixgen.jl  plotter.py
ON/List5/report/: report.tex
ON/Lista1/: exercise1.jl  exercise2.jl  exercise3.jl  exercise4.jl  exercise5.jl  exercise6.jl  exercise7.jl  zad1.cpp  zad1.ipynb  zad2.ipynb  zad3.ipynb  zad3.jl  zad6.jl  zad7.jl
ON/Lista1/report/: report.tex
ON/Lista2/: exercise2.jl  exercise3.jl  exercise4.jl  exercise5.jl
(+55 files in other folders)
