[package]
name = "tsp_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angular-units = "0.2.4"
anyhow = "1.0.75"
crossterm = "0.27.0"
itertools = "0.11.0"
prisma = "0.1.1"
rand = "0.8.5"
ratatui = "0.24.0"
tspf = "0.3.1"
