[package]
name = "exercise2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
rand = "0.8.5"
local_search = { path="../local_search" }
tspf = "0.3.1"
