[package]
name = "local_search"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "target-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[dependencies]
async-std = "1.12.0"
futures = "0.3.29"
rand = "0.8.5"

[dev-dependencies]
tspf = "0.3.1"
