[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
codespan-reporting = "0.11.1"
itertools = "0.12.0"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
tempfile = "3.9.0"
