[package]
name = "compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elias_coding = { path = "../elias_coding" }
lzw = { path = "../lzw" }
fibonaci_coding = { path = "../fibonaci_coding" }
bit_queue = { path = "../bit_queue" }
args = "2.2.0"
getopts = "0.2.21"
