[package]
name = "elias_coding-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bit_queue = { path = "../../bit_queue" }
[dependencies.elias_coding]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "elias_gamma"
path = "fuzz_targets/elias_gamma.rs"
test = false
doc = false

[[bin]]
name = "elias_delta"
path = "fuzz_targets/elias_delta.rs"
test = false
doc = false

[[bin]]
name = "elias_omega"
path = "fuzz_targets/elias_omega.rs"
test = false
doc = false
